[gd_scene load_steps=2 format=3 uid="uid://cadvytfr82en2"]

[ext_resource type="Script" path="res://CdB/Scripts/CDBmenu_inicial.gd" id="1_eyy4d"]

[node name="MenuInicial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eyy4d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.0434028
anchor_top = 0.203704
anchor_right = 0.470733
anchor_bottom = 0.612083
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="CriarBaralho" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Criar Baralho"

[node name="ModificarBaralho" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
text = "Modificar Baralho"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.519965
anchor_top = 0.188272
anchor_right = 0.926215
anchor_bottom = 0.665123
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "caminhos usados anteriormente"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(468, 277)
layout_mode = 2
horizontal_scroll_mode = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/ScrollContainer"]
layout_mode = 2

[node name="CaminhoParaBaralhoCRIA" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="CaminhoParaBaralhoMOD" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Select Current Folder"
file_mode = 2

[connection signal="pressed" from="VBoxContainer/CriarBaralho" to="." method="_on_criar_baralho_pressed"]
[connection signal="pressed" from="VBoxContainer/ModificarBaralho" to="." method="_on_modificar_baralho_pressed"]
[connection signal="dir_selected" from="CaminhoParaBaralhoCRIA" to="." method="_on_caminho_para_baralho_dir_selected"]
[connection signal="dir_selected" from="CaminhoParaBaralhoMOD" to="." method="_on_caminho_para_baralho_mod_dir_selected"]
